--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
         </td>
         <td>
           <p class="sigTag">
-            Enhanced signal
+            Enhanced binaural signal
           </p>
           <img src=".\img\S06253-beamforming-suppressed_ch0.png" class="spectrogram"><br/>
           <img src=".\img\S06253-beamforming-suppressed_ch1.png" class="spectrogram"><br/>
@@ -385,7 +385,7 @@
 
       <tr>
         <td class="sigInfo">
-          Speech in vaccum noise
+          Speech in domestic (vacuum) noise
         </td>
         <td>
           <p class="sigTag">
@@ -396,7 +396,7 @@
         </td>
         <td>
           <p class="sigTag">
-            Enhanced signal
+            Enhanced binaural signal
           </p>
           <img src=".\img\S07845-beamforming-suppressed_ch0.png" class="spectrogram"><br/>
           <img src=".\img\S07845-beamforming-suppressed_ch1.png" class="spectrogram"><br/>
@@ -406,7 +406,7 @@
 
       <tr>
         <td class="sigInfo">
-          Speech in speech
+          Speech in interfering speech
         </td>
         <td>
           <p class="sigTag">
@@ -417,7 +417,7 @@
         </td>
         <td>
           <p class="sigTag">
-            Enhanced signal
+            Enhanced binaural signal
           </p>
           <img src=".\img\S07835-beamforming-suppressed_ch0.png" class="spectrogram"><br/>
           <img src=".\img\S07835-beamforming-suppressed_ch1.png" class="spectrogram"><br/>
@@ -438,7 +438,7 @@
         </td>
         <td>
           <p class="sigTag">
-            Enhanced signal
+            Enhanced binarual signal
           </p>
           <img src=".\img\S07837-beamforming-suppressed_ch0.png" class="spectrogram"><br/>
           <img src=".\img\S07837-beamforming-suppressed_ch1.png" class="spectrogram"><br/>
