change the display of the counter

--- a/index.html
+++ b/index.html
@@ -445,7 +445,9 @@
 
   <p>
     <!-- <img alt="Hits" src="https://hits.sh/aspireugent.github/SOTA-demos.svg?color=3265C2&labelColor=ffffff"/> -->
-    <img alt="Hits" src="https://hits.sh/aspireugent.github.io/SOTA-demos.svg?color=3265C2&labelColor=ffffff"/>
+    <img src="https://hits.sh/aspireugent.github.io/SOTA-demos.svg"
+      style="float: right;padding-right: 15px;" 
+      width="10" />
   </p>
 
 </div>
