fix the text for the binaural

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
           Now we show a <em>proof-of-concept</em> work for binaural hearing augmentation – work we have <em>recently started</em>. The results here are based on the <a href="http://claritychallenge.org">Clarity challenge</a> data, where the user wears <em>binaural</em> behind-the-ear (BTE) hearing-aids, each equipped with 3 microphones. The goal is to extract the signal of the target speaker in the presence of localised interference which could either be a household appliance (boiling kettle, vacuum cleaner, …) or an interfering talker. The separation is based on a classical beamformer-postfilter combination, where the <em>statistic estimation</em> is driven by deep learning. Example scenarios are demonstrated below, with:
           <ul>
             <li>the left panel showing the noisy mixture signal at one ear and </li>
-            <li>the right panel showing the binaural target signal estimate.</li>
+            <li>the right panel showing the right channel of the binaural target signal estimate.</li>
           </ul>
           We have focussed on fully attenuating the interfering source – which is an acceptable strategy because of the <em>domestic</em> setting. <br>
           In future work, for generalised augmentation, we will consider location and <em>scene informed</em> source separation – which will yield the appropriate context dependent enhancement. 
