--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
     <ul>
       <li><a href="https://ieeexplore.ieee.org/document/9829294">TASLP</a>: <a href="https://yanjuesong.github.io/Improved-CEM-samples/">Improved CEM for Speech Harmonic Enhancement in Single Channel Noise Suppression</a> </li>
       <li><a href="https://ieeexplore.ieee.org/document/10096868/">ICASSP 2023</a>: <a href="https://yanjuesong.github.io/CEM-loss-samples/">Aiding speech harmonic recovery in DNN-based single channel noise reduction using cepstral excitation manipulation (CEM) components</a> </li>
-      <li><a href="https://ieeexplore.ieee.org/document/10094862">ICASSP 2023</a>: <a href="https://aspireugent.github.io/Ad-Hoc-Distributed-Microphone-Clusters/">Exploiting speaker embeddings for improved microphone clustering and speech separation in ad-hoc microphone arrays</a> </li>
+      <li><a href="https://ieeexplore.ieee.org/document/10094862">ICASSP 2023</a>: <a href="https://users.ugent.be/~sbkindt/ICASSP2023/">Exploiting speaker embeddings for improved microphone clustering and speech separation in ad-hoc microphone arrays</a> </li>
       <li><a href="https://aspireugent.github.io/Selective-Speaker-Separation/">A DOA Dependent Feature Extraction for Selective Speaker Separation With a U-Net Architecture</a> </li>
     </ul>
   </p>
