--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
    <div class="row">
     <div class="logo"><img src=".\img\logo_ugent_nl.svg"></div>
     <div class="banner">
-      <h1 class="closer">ASPIRE</h1>
+      <a href="https://aspire.ugent.be/"><h1 class="closer">ASPIRE </h1></a>
       <p class="closer" style="font-size: 90%;">Audio and Signal Processing, Interpretation, and Enhancement@IDLAB</p>
     </div>
   </div>
