--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 <div>
 
   <ul class='navi-bar'>
-    <li><a class="navi-item active" href="#home">Home</a></li>
+    <li><a class="navi-item active" href="https://aspire.ugent.be/">Home</a></li>
     <li><a class="navi-item location" href="#location">Location-informed DNN for source separation</a></li>
     <li><a class="navi-item" href="#binaural">Proof of concept for binaural augmentation</a></li>
     <li><a class="navi-item" href="#about">About ASPIRE</a></li>
